--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 }
 
 
@@ -18,6 +19,6 @@ code {
 .App {
   border: 1px solid #9e9e9e;
   border-radius: 10px;
-  padding: 20px;
+  padding: 50px;
   background: linear-gradient(#ffffff, aliceblue);
 }
